--- a/resumeForm.html
+++ b/resumeForm.html
@@ -64,4 +64,7 @@
     <script src="resumeCreator.js"></script>
 
 </body>
+<footer style="text-align: center;">
+    &copy;Harsh Kant
+</footer>
 </html>
